# openGE

./: .gitignore  DATA_LOADER_README.md  GENETIC_LOADER_README.md  ProjectLayout.txt  README.md  environment_test.py  interpret.py  predict.py  pyproject.toml  requirements.txt  setup.py  test_ec_only.py  test_encoding_methods.py  test_full_year_weather.py  test_genetic_loader.py  test_genetic_loader_standalone.py  test_loader_full.py  test_loader_simple.py  test_missing_values.py  test_phenotype_loader.py  train.py  view.ipynb  view_data_slices.py  view_npz.py
configs/: base.yaml  maize_2024.yaml  maize_cnn_transformer.yaml  maize_transformer.yaml  maize_weather_3d.yaml  sparse_transformer.yaml  wheat_2025.yaml
openge/: __init__.py
openge/core/: __init__.py  config.py  engine.py  registry.py
openge/data/: __init__.py  dataloaders.py  dataset.py  preprocess.py
openge/data/loaders/: __init__.py  environment.py  genetic.py  phenotype.py
openge/interpretability/: __init__.py  attention_analysis.py  feature_importance.py  gradient_methods.py  shap_explainer.py  sparsity_analysis.py
openge/models/: __init__.py  encoders.py  fusion.py  gxe.py  heads.py  linear.py
openge/models/sparse/: __init__.py  pruning.py  sparse_attention.py  (+1 more)
openge/utils/: __init__.py  metrics.py  visualization.py
output/: combined_environment_data_20251221_024235.csv  genotypes_20251221_031418.npz  phenotypes_20251221_032325.npz  weather_3d_20251221_024235.npz  weather_3d_20251221_032831.npz  weather_full_year_3d_20251221_030316.npz  weather_static_20251221_032831.csv
outputs/run_20251228_155409/: results.json  test_predictions.npz
outputs/run_20251229_094714/: results.json  test_predictions.npz
outputs/run_20251229_095600/: results.json  test_predictions.npz
predictions/: evaluation_metrics.json  predictions.csv  predictions.npz  submission.csv
tests/: __init__.py  test_dataset.py  test_interpretability.py  test_models.py  test_sparse_models.py
